devscripts (2.8.15) UNRELEASED; urgency=low

  * bts: fix bts --mbox show nnnn after bts show nnnn
  * debchange: use word "file" in manpage for --changelog option (closes:
    #301917)
  * debchange: debian/NEWS.Debian should have been debian/NEWS (closes:
    #303886)
  * debuild: correct manpage typo (closes: #309825)
  * debdiff: handle debdiff on two identically-named native .dsc files
    (closes: #307318)
  * grep-excuses: no longer cache web page, as per bug#309802
  * rc-alert: no longer automatically create cache directory, as per
    bug#309802
  * uscan: handle annoying error message (closes: #303607)
  * wnpp-alert: accept -h and -v short options (closes: #304240)
  * wnpp-alert: don't cache such small files (closes: #309802)

 -- Julian Gilbey <jdg@polya.uklinux.net>  Tue, 12 Apr 2005 11:46:36 +0100

devscripts (2.8.14) unstable; urgency=low

  * uscan: fix second showstopper (broken URL parsing) (closes: #301169)

 -- Julian Gilbey <jdg@debian.org>  Thu, 24 Mar 2005 14:33:05 +0000

devscripts (2.8.13) unstable; urgency=low

  * bts: provide --quiet option (closes: #299344)
  * dpkg-depcheck: improve sgml catalog regexp (closes: #295845)
  * uupdate: improve error message (closes: #267317)
  * uscan: fix showstopper (closes: #301177)

 -- Julian Gilbey <jdg@debian.org>  Thu, 24 Mar 2005 09:13:15 +0000

devscripts (2.8.12) unstable; urgency=low

  * bts: allow --mbox etc. options to appear after the show/bugs keyword
    as well as before, and similarly with the "cache" command
  * bts: allow bug numbers to end with a ":" (closes: #300965)
  * debchange: use access rather than stat for checking file permissions
    (closes: #298659); also do same to debi and debuild
  * debdiff: don't hardcode wdiff path
  * debsign: correct obsolete head syntax (closes: #300844)
  * uscan: watch files are now version=3 (should have done this with
    2.8.11, oops)
  * uscan: now support DEHS-style output and --watchfile etc options