@@ -1,0 +1,20 @@
+.TH WHODEPENDS 1 "Debian Utilities" "DEBIAN" \" -*- nroff -*-
+.SH NAME
+whodepends \- check which maintainers' packages depend on a package
+.SH SYNOPSIS
+\fBwhodepends\fP [\fIpackage\fR] [options]
+.SH DESCRIPTION
+\fBwhodepends\fR gives the names, e-mail addresses and the packages they
+maintain which depend on the given packages of all maintainers who have
+packages depending on the given package.
+.SH OPTIONS
+.TP
+.B \-\-help, \-h
+Show a brief usage message.
+.TP
+.B \-\-version, \-v
+Show version and copyright information.
+.SH BUGS
+\fBwhodepends\fR is not very efficient.
+.SH AUTHOR
+\fBwhodepends\fR has been written by Moshe Zadka <moshez@debian.org>.
